# FinanceSync

./: .gitignore  MOBILE_ACCESS_SETUP.md  README.md
.specify/memory/: constitution.md
backend/: .env  .env.example  README_AUTH.md  README_USERS.md  _temp_income.txt  alembic.ini  api_sources_config.json  check_server.sh  ecosystem.config.js  file_import_config.json  pyproject.toml  start_server.sh  start_server_pm2.sh
backend/app/: db.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: __init__.py  api_sources.py  auth.py  expense_forecast.py  imports.py  imports_confirm.py  nlq.py  overview.py
backend/app/core/: auth.py  config.py  permissions.py  security.py
backend/app/models/: financial.py
backend/app/repositories/: expense_forecast.py  import_jobs.py
backend/app/schemas/: auth.py  expense_forecast.py  imports.py  nlq.py  overview.py
backend/app/services/: ai_parser.py  api_source.py  category_service.py  file_format_detector.py  financial_overview.py  llm_client.py  nlq_service.py  storage_adapter.py
backend/app/services/parsers/: __init__.py  revenue_parser.py
backend/app/workers/: __init__.py  directory_watcher.py  import_processor.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_add_revenue_details.py  0003_extend_income_forecasts.py  0004_add_expense_forecasts.py  0005_add_user_auth.py
backend/scripts/: adjust_income_forecast_date.py  change_user_role.py  create_admin.py  create_user.py  fix_user_permission.md  list_users.py  test_sqlserver_connection.py
backend/storage/: 96b44ccd-838a-47ae-88e8-88ea6bf594fe_1.xlsx
backend/tests/contract/: test_parse_upload.py
backend/tests/integration/: test_financial_overview.py  test_import_flow.py  test_revenue_summary.py
deploy/: DEPLOYMENT.md  QUICK_START.md  nginx.conf  setup.sh
frontend/: .env.example  UPGRADE_TO_EXPO_54.md  app.json  babel.config.js  metro-transformer.js  metro.config.js  package-lock.json  package.json
frontend/.expo/types/: router.d.ts
frontend/app/: _layout.tsx  index.tsx  login.tsx
specs/001-finance-data-hub/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+19 files in other folders)
