[tool.poetry]
name = "financesync-backend"
version = "0.1.0"
description = "FinanceSync backend service built with FastAPI and Celery."
authors = ["FinanceSync Team <finance@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = "^2.9.0"
pydantic-settings = "^2.7.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg = { extras = ["binary"], version = "^3.2.1" }
celery = "^5.4.0"
redis = "^5.1.0"
watchfiles = "^0.22.0"
sqlglot = "^25.7.0"
pandas = "^2.2.3"
python-multipart = "^0.0.9"
aiofiles = "^24.1.0"
httpx = "^0.27.2"
tenacity = "^9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"
schemathesis = "^3.27.7"
ruff = "^0.6.5"
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

